# cloud_oracle_precomputer

./: .gitignore  Cargo.toml  README.md  Requirements.txt  _build.rs  latency_format.ipynb  storage_pricing.csv
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json  install_protobuf.sh
baselines/: Cargo.toml  pyproject.toml
baselines/python_samples/: kmeans.py  migration_optimizer.py  profit.py  spanstore_aggregate.py
baselines/src/: kmeans.rs  migration_optimizer.rs  optimizer.rs  profit.rs  py_loader.rs  sky_pie_baselines.rs  workload.rs
data/: latency_formated.csv
deploy/: __init__.py  __main__.py  combined_pipeline.hydro.py  decisions_test.hydro.py  experiment.py  precomputation.py  reduce_test.hydro.py  run.py  simple_pipeline.hydro.py  test_gcp.py  util.py  write_choice_demux_test.hydro.py
deploy/experiments/: __init__.py  sigmod.py  skystore.py
deploy/old/: decisions_test.hydro.py  reduce_test.hydro.py  test_gcp.py  write_choice_demux_test.hydro.py
examples/: candidate_and_reduce_launch.rs  counter.rs  decisions_counter_launch.rs  decisions_generator_launch.rs  python_redundancy_bridge.py  python_standalone.rs  redundancy_elim_test_launch.rs  simple_candidate_policies_launch.rs  write_choices_simple_demux_launch.rs  write_choices_simple_launch.rs
proto_messages/: Cargo.toml  build.rs  pyproject.toml
proto_messages/generated_python/: assignment_pb2.py  decision_pb2.py  optimal_by_optimizer_pb2.py  run_pb2.py  scheme_pb2.py  tier_advise_pb2.py
proto_messages/proto/: assignment.proto  decision.proto  optimal_by_optimizer.proto  run.proto  scheme.proto  tier_advise.proto  wrapper.proto
proto_messages/src/: proto_messages.rs  protobuf_file_reader.rs  protobuf_file_sink.rs
python_redundancy_elimination/: pyproject.toml
python_redundancy_elimination/src/skypie_redundancy_elimination/: __init__.py  redundancy_elimination_parallel.py
python_redundancy_elimination/src/skypie_redundancy_elimination/redundancy_elimination/: __init__.py  redundancy_elimination.py  redundancy_elimination_cvxpy.py  redundancy_elimination_mosek.py
python_redundancy_elimination/src/skypie_redundancy_elimination/redundancy_elimination_clarkson/: __init__.py  redundancy_elimination_clarkson.py  redundancy_elimination_clarkson_mosek.py
python_redundancy_elimination/src/skypie_redundancy_elimination/util/: EnhancedJSONEncoder.py  Enums.py  Timer.py  __init__.py  create_optimizer.py  data_normalization.py  mosek_settings.py
python_redundancy_elimination/tests/: test_redundancy_elimination.py
skypie_lib/: Cargo.toml  decision.rs  iter_stream_batches.rs  merge_policies_hydroflow.rs  monitor.rs  object_store.rs  opt_assignments.rs  reduce_oracle_hydroflow.rs
skypie_lib/benches/: bitset_bench.rs
skypie_lib/examples/: candidate_and_reduce_launch.rs  candidate_policies_launch.rs  decisions_generator_launch.rs  logger_launch.rs  write_choices_simple_demux_launch.rs  write_choices_simple_launch.rs
skypie_lib/examples/old/: candidate_policies_launch.rs  decisions_counter_launch.rs  hydroflow_launch.rs  influxdb_test.rs  redundancy_elim_test_launch.rs  write_choices_simple_launch.rs
skypie_lib/src/: application_region.rs  args.rs  batcher.rs  candidate_policies_and_reduce_hydroflow.rs  compatibility_checker.rs  compatibility_checker_network_slos.rs  decision.rs  identifier.rs  iter_stream_batches.rs  latency_record.rs  loader.rs  log_entry.rs  merge_policies.rs  object_store.rs  opt_assignments.rs  optimizer_stats.rs  python_redundancy_bridge.py  range.rs  read_choice.rs  skypie_lib.rs  tombstone.rs  write_choice.rs
skypie_lib/src/old/: conditional_streams.rs  influx_logger.rs  merge_policies_by_ref.rs  noop_logger.rs
src/: args.rs  candidate_policies.rs  candidate_policies_hydroflow.rs  combinations.rs  decision.rs  lib.rs  loader.rs  main.rs  merge_policies.rs  network_record.rs  object_store.rs  opt_assignments.rs  opt_assignments_hydroflow.rs  read_choice.rs  reduce_oracle.rs  skypie_precomputation.rs  skypie_precomputation_hydroflow.rs  write_choice.rs
src/skypie_lib/: .candidate_policies_and_reduce_hydroflow.rs.swp  args.rs  candidate_policies.rs  candidate_policies_and_reduce_hydroflow.rs  candidate_policies_hydroflow.rs  combinations.rs  decision.rs  influx_logger.rs  loader.rs  log_entry.rs  merge_policies.rs  mod.rs  monitor.rs  network_record.rs  object_store.rs  opt_assignments.rs  output.rs  read_choice.rs  reduce_oracle.rs  region.rs  skypie_lib.rs  skypie_precomputation.rs  write_choice.rs
util/: build_python_packages.sh  compare_decisions.py  decision_stats.py  export_miniconda_mac.sh  install_mosek_license.sh  merge_oracles.py
