[package]
name = "sky-pie-precomputer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = [ "derive" ] }
hydroflow = { git = "https://github.com/hydro-project/hydroflow"}
serde = { version = "1", features = [ "derive" ] }
chrono = { version = "0.4.20", features = [ "serde" ], default-features = true }
csv = "1.1"
itertools = "0.10.5"
regex = "1.5.4"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
criterion = "0.3"
