[workspace]

members = [
    "proto_messages",
    "skypie_lib"
]

resolver = "2"

[profile.release]
strip = true      # Strip symbols from the binary
# Previously this was "z" to minimize docker binary size while sacrificing performance. But "z"
# doesn't make things that much smaller, `strip` is far more important for binary size. Use "3" for
# performance.
opt-level = 3
lto = "fat"

[profile.profile]
inherits = "release"
debug = 2
strip = "none"