[package]
name = "sky-pie-precomputer-proto-messages"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hydroflow = { git = "https://github.com/hydro-project/hydroflow", features = [ "cli_integration", "python"]}
tokio = { version = "1", features = ["full"] }
bytes = "^1"
prost = "0.11.9"
# Only necessary if using Protobuf well-known types:
prost-types = "0.11.9"

[build-dependencies]
prost-build = { version = "0.11.9" }

[lib]
name = "skypie_proto_messages"
path = "src/proto_messages.rs"