[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "skypie-proto-messages"
version = "0.1"
license = { file = "../LICENSE" }
description = "A package utility package of serialization of SkyPIE oracles"
authors = [{name = "Tiemo Bang", email = "doe@mail.com"}]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
Homepage = "https://github.com/hydro-project/cloud_oracle"

[tool.maturin]
features = ["python-module"]
profile = "release"